--- a/src/app/componentes/pages/agenda/agenda.component.html
+++ b/src/app/componentes/pages/agenda/agenda.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h3>Reserva de hora</h3>
 
-    <div class="col-md-8 mx-auto" *ngIf="!isResult">
+    <div class="col-md-8 mx-auto" id="ShowPrimerBloque" *ngIf="!isResult && !showCalendario">
         <div class="card mt-4">
             <div class="card-header text-center">
                 <div class="btn-group btn-group-justified tabs">
@@ -16,9 +16,10 @@
                     <div class="form-group">
                         <div class="row mb-2 mt-3">
                             <label for="name">Ingrese Profesional:</label>
-                            <select class="form-control" name="profesionales" [(ngModel)]="selectedProfesional" (change)="seleccionarProfesionalDesdeDropdown($event)">
+                            <select class="form-control" name="profesionales" [(ngModel)]="selectedProfesional"
+                                (change)="seleccionarProfesionalDesdeDropdown($event)">
                                 <option *ngFor="let profesional of profesionales" [value]="profesional._id">
-                                {{ profesional.nombre }}</option>
+                                    {{ profesional.nombre }}</option>
                             </select>
                         </div>
                         <div class="mt-3 text-center">
@@ -36,8 +37,9 @@
                         <div class="row mb-2 mt-3">
                             <label for="name">Ingrese Especialidad:</label>
                             <select class="form-control" name="especialidades" [(ngModel)]="selectedEspecialidad">
-                                <option *ngFor="let especialidad of especialidades" [value]="especialidad.id">{{
-                                    especialidad.nombre }}</option>
+                                <option *ngFor="let especialidad of especialidades" [value]="especialidad.id">
+                                {{ especialidad.nombre }}
+                            </option>
                             </select>
                         </div>
                         <div class="mt-3 text-center">
@@ -69,29 +71,24 @@
                                 <label for="profesional">Profesional:</label>
                                 <p id="profesional">{{ selectedProfesional.nombre }}</p>
                             </div>
-                            <!-- Agregar una tabla donde se muestre las especialidades del profesional -->
+
+                            <!-- Mostrar especialidades como un dropdown -->
                             <div class="row mb-2 mt-3" *ngIf="especialidades.length > 0">
-                                <label for="name">Especialidades:</label>
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">#</th>
-                                            <th scope="col">Especialidad</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let especialidad of especialidades; let i = index">
-                                            <th scope="row">{{ i + 1 }}</th>
-                                            <td>{{ especialidades }}</td>       
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <label for="name">Seleccione una especialidad:</label>
+
+                                <select class="form-control" name="especialidad" [(ngModel)]="selectedEspecialidad"
+                                (change)="mostrarSeleccion()">
+                                    <option *ngFor="let especialidad of especialidades" [value]="especialidad">
+                                        {{ especialidad }}
+                                    </option>
+                                </select>
+                            </div>
                             </div>
                             <div *ngIf="especialidades.length === 0" class="text-center">
                                 <p>No hay especialidades disponibles para este profesional.</p>
                             </div>
                             <div class="mt-3 text-center">
-                                <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
+                                <button class="btn btn-primary active" type="submit" (click)="btnsig2($event, showCalendario)">
                                     Siguiente
                                 </button>
                                 <button class="btn btn-seundary active" type="submit" (click)="goBack()">
@@ -102,5 +99,27 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
+    <div class="col-md-8 mx-auto" *ngIf="showCalendario">
+            <!-- Otras secciones existentes... -->
+        
+            <!-- Sección para mostrar calendario -->
+            <div class="card mt-4">
+                <div class="card-header text-center">
+                    <h5>Calendario de Horas Disponibles</h5>
+                </div>
+                <div class="card-body">
+                    <!-- Contenido de tu calendario aquí -->
+                    <!-- Puedes incluir tu lógica y componente de calendario -->
+                </div>
+            </div>
+            <div class="mt-3 text-center">
+                <button class="btn btn-primary active" type="submit" (click)="btnsig($event, isResult)">
+                    Siguiente
+                </button>
+                <button class="btn btn-seundary active" type="submit" (click)="goBack()">
+                    Volver
+                </button>
+            </div>
+        </div>
+</div>
